Media for space coast post

--- a/blog/_posts/2023-08-30-update-3.md
+++ b/blog/_posts/2023-08-30-update-3.md
@@ -49,7 +49,7 @@ The tags system should be more robust and precise with the separate feeds. Tag f
 
 Last thing: a new button, enjoy. You should see other websites using it update automatically, like [Nick64's site](https://nick64.me) :D
 
-{% include image.html url="/assets/mybutton/2023-08-30-welcometoroblox.gif" alt="An 88x31 gif of an old Roblox recording where a sign saying 'realjame' gets blown into pieces in the middle of a small city, before the clip reverses and it comes back together." caption="This is the map used in John Shedletsky's 2008 <a href='https://www.youtube.com/watch?v=oDVAjvNeGA8'>Welcome to ROBLOX</a> trailer (or maybe a remake of it, I'm not sure. You can find it in Novetus's default map pack)." width="88" height="31" %}
+{% include image.html url="/assets/mybutton/2023-08-30-welcometoroblox.gif" alt="An 88x31 gif of an old Roblox recording where a sign saying 'realjame' gets blown into pieces in the middle of a small city, before the clip reverses and it comes back together." caption="This is the map used in John Shedletsky's 2008 <a href='https://www.youtube.com/watch?v=oDVAjvNeGA8'>Welcome to ROBLOX</a> trailer (or maybe a remake of it, I'm not sure. You can find it in Novetus's default map pack)." x="88" y="31" %}
 
 Speaking of which, I'm confident posting will be considerably more active. I've spent a lot of time thinking about what kind of content this website will have. The daily notes especially would allow me to write whatever I want without worry of disrupting more long-form, important posts. Plus, announcements won't get buried by other posts thanks to it being archived in the Projects page. Finally, realja.me is organized and capable for everything I want to do with it.
 
