wrapping up the jsomers bookmark and hide other posts for a public push

--- a/dailynote/_posts/2023-11-19-jsomers.md
+++ b/dailynote/_posts/2023-11-19-jsomers.md
@@ -3,7 +3,7 @@ layout: post
 category: dailynote
 title: "🔗 James Somers: 'More people should write' (2012)"
 tags: [bookmark]
-date: 2023-11-19
+date: 2023-11-20
 published: true
 ---
 
@@ -21,4 +21,4 @@ Writing, being able to format and output thoughts in your mind, is one of the mo
 
 > Walk around with a pen and a scrap of paper. Write some meaty emails. Engage more intensely with this place.
 
-I've been planning to write a blog post about my journaling habits, and this might push me to do it.
+I want to write more posts. I have a few topics to write about, so this might push me to do it.
