--- a/blog/_posts/2023-11-17-wiki.md
+++ b/blog/_posts/2023-11-17-wiki.md
@@ -5,7 +5,7 @@ title: "The future of the Roblox Legacy Wiki"
 tags: [personal, thought, journaling]
 date: 2023-11-17
 # image: /blog/media/spacecoast-thumbnail.jpg
-published: true
+published: false
 ---
 I'm working on a kinda-big revamp to the wiki to provide a permanent place for community creations on the internet.
 
