the post about bookwyrm

--- a/dailynote/_posts/2023-12-31-hopes-2024.md
+++ b/dailynote/_posts/2023-12-31-hopes-2024.md
@@ -4,6 +4,6 @@ category: dailynote
 title: "2024 hopes"
 tags: [thought, personal]
 date: 2023-12-31
-published: true
+published: false
 ---
 The final day in 2023, and I've been thinking.
