--- a/dailynote/_posts/2023-12-28-reflection-2023.md
+++ b/dailynote/_posts/2023-12-28-reflection-2023.md
@@ -4,7 +4,7 @@ category: dailynote
 title: "2023 reflection"
 tags: [thought, personal]
 date: 2023-12-28
-published: true
+published: false
 ---
 It's that time of year where people start to regret their decisions in the year, or lack thereof. How did this year go by so fast, they wonder? I'm in that boat too.
 But some people are additionally able to look back on their year with pride, so let's reflect.
