--- a/blog/_posts/2023-12-31-reflection-2023.md
+++ b/blog/_posts/2023-12-31-reflection-2023.md
@@ -1,24 +1,25 @@
 ---
 layout: post
-category: dailynote
-title: "2023 reflection"
+category: blog
+title: "Reflecting on 2023"
 tags: [thought, personal]
-date: 2023-12-28
-published: false
+date: 2023-12-31
+published: true
 ---
 Since 2023 is over in a few days, I want to recap what happened in 2023.
 
 ## Quick Stats
 
 - I made **33** posts, wow!!
-  - **6** blog posts
-  - **20** dailynotes
+  - **7** blog posts (including this one)
+  - **19** dailynotes
   - **7** devlogs
 - I reached **115** followers on Mastodon (thank you, everyone!!)
 - Released **0** old Roblox projects :')
   - Made **6** basic prototypes
   - Got **2** games decently far
-  - Cancelled **1** ([the farming game](/devlog/farming-3.html)). [Micrathena](/projects/micrathena.html) will live 🤫
+  - Cancelled **1** ([the farming game](/devlog/farming-3.html)).
+    - [Micrathena](/projects/micrathena.html) will live 🤫
 - Redesigned the site **3** times ([1](/blog/general-update.html) [2](/blog/general-update-2.html) [3](/blog/update-3.html)). But this one is here to stay.
 - Posted about regrets for being lazy and not posting **6** times ([1](/blog/general-update.html) [2](/blog/general-update-2.html) [3](/blog/update-3.html) [4](/dailynote/blog-more.html) [5](/dailynote/where-are-the-notes.html) [6](/dailynote/hi.html))
 
@@ -31,3 +32,9 @@ I'm still not there yet. In fact, I kinda suck in so many ways!! I fail to deliv
 My junior year of high school ended in May, and I did not like that year very much. It was filled with classes I just did not enjoy taking, and generally was a waste of time. My senior year, is different. As one effort to leave the *soulless phase* I wanted to stop autopiloting through what is the most impactful thing in my life - school. Those classes happened because I did not fully consider what they entail and how it will affect my future. I wanted to think consciously about the classes I take in my final year of high school. It's hard to reverse course in your last year of high school, but I'm grateful that I'm given the controls one last time. So this time, it's great! I cut classes I didn't like, and I took a few I'm new to. My Psychology class especially is something entirely novel to me, but I'm learning a lot that happens to apply to other parts of my life in roundabout ways.
 
 On the positive side, I did work on the [Roblox Legacy Wiki](https://wiki.realja.me) project considerably, and while it's not fully there, I'm happy with its current state. It's helped a LOT of people, and I'm extremely happy to hear your praises in the various Discord servers I lurk in. Thank you all!
+
+## On Micrathena
+
+## On future projects
+
+I'll talk about it in a future post where I'll write my hopes and plans for 2024.
