--- a/blog/_posts/2023-12-31-reflection-2023.md
+++ b/blog/_posts/2023-12-31-reflection-2023.md
@@ -8,33 +8,73 @@ published: true
 ---
 Since 2023 is over in a few days, I want to recap what happened in 2023.
 
-## Quick Stats
+<!-- I have no real comments about this post. I put off writing it all week, so that's on me. Happy new year!! -->
+It is 10:44PM, and I am rushing this post out. So it won't be long, or edited. Expect a part 2 post tomorrow.
+
+## Stats
 
 - I made **33** posts, wow!!
   - **7** blog posts (including this one)
   - **19** dailynotes
   - **7** devlogs
-- I reached **115** followers on Mastodon (thank you, everyone!!)
-- Released **0** old Roblox projects :')
-  - Made **6** basic prototypes
-  - Got **2** games decently far
+- I reached **123** followers on Mastodon (thank you, everyone!!)
+- Released **0** old Roblox games :')
+  - Made **7** basic prototypes
+  - Got **2** games beyond a tiny prototype
   - Cancelled **1** ([the farming game](/devlog/farming-3.html)).
     - [Micrathena](/projects/micrathena.html) will live 🤫
 - Redesigned the site **3** times ([1](/blog/general-update.html) [2](/blog/general-update-2.html) [3](/blog/update-3.html)). But this one is here to stay.
 - Posted about regrets for being lazy and not posting **6** times ([1](/blog/general-update.html) [2](/blog/general-update-2.html) [3](/blog/update-3.html) [4](/dailynote/blog-more.html) [5](/dailynote/where-are-the-notes.html) [6](/dailynote/hi.html))
 
+## Notable stuff
+
+The [Roblox Legacy Wiki](https://wiki.realja.me) has had periods of super active work and inactivity. Right now we're mostly inactive, but we've gotten a lot of super cool work done over the year. The Roblox Legacy Wiki has seen a lot of use in various old Roblox circles across the internet, and that's amazing to see. I'm grateful for everyone's support and kind wishes! And I have to say thanks to all the editors who have contributed time, effort, and knowledge:
+
+- [Bitl](https://bitl.carrd.co/)
+- [GuestIsJustBest](https://wiki.realja.me/index.php?title=User:GuestIsJustBest)
+- ObsidianPLG
+- Pongo02
+- Soupnuts6061
+- [Tobu](https://wiki.realja.me/index.php?title=User:Tobufi)
+
+Thank you!
+
+I'd really like to work on it more next year, including finishing [a revamp](https://wiki.realja.me/index.php?title=User:Realjame/Home) that I haven't touched since late November.
+
+The other project I did was remaking [textarea.site](https://textarea.site) as a way to learn the Svelte web framework and refresh my web development skills. I'd like to do more web development stuff in the future, but I have no idea what to make, hence the inactivity. Maybe things will change in 2024.
+
+In August, I made a new effort to revive my site, and so far it's been a huge improvement. Posts aren't as active as I want them to be, but I've made tons of daily notes about different topics, and I have so many more I want to do. I'm still really happy about the whole look of the site, I think it finally looks a bit soulful and unique compared to before.
+
+In December I got back into reading. And after Christmas, I've been making an effort to post here at least every other day. I don't think I'll keep this up for long, but I haven't run out of ideas yet and I can feel the habit of making sure to write something (even unpublished drafts) every day start to develop!
+
+## About Micrathena...
+
+Micrathena is that new game designed for 2009+ versions of Roblox. And I haven't finished it. In fact, I haven't even touched the project since November!
+
+But I don't want to cancel the project. I'm confident I will be working on it again very soon, and it'll come out when it comes out. I can live with on and off development, which is what's been happening.
+
+- I made a prototype for something completely different in **July** and **August**
+- I reworked the prototype into Micrathena in **September**
+- Worked on it some more in **October**
+- Worked on it very slightly in **November**
+- **December**: Nothing.
+
+{% include image.html url="/blog/media/reflection-2023.png" alt="Screenshot of a GitHub commit graph. Some activity in July and the first week of August, then no activity for the rest of August. Activity rose before spiking in the middle of September, fluctuating throughout October. A gap, and then some activity in November. After that, nothing." caption="Commit history for Micrathena" x="1351" y="304" %}
+
+Without a doubt, January will see work on this game.
+
 ## Other stuff
 
-I don't really care for the first half of this year. I believe my life began taking a turn towards becoming truly meaningful and impactful some time around then, culminating with the [trip to Seattle](blog/wa.html), which fulfilled a lot of my desires and thoughts. It helped define my path, even if it's not entirely aimed towards Seattle (99% chance I will attend college in Florida for money reasons). I don't really want to read my older posts because of how soulless my life was back then. Another thing that helped me step out of the "soulless times" was new faces in my family. I won't get that personal on here, at least right now, but it really brightened my life up and pushed me.
+Talking about my life is too personal even for this website. But I think a lot of the first part of this year was soulless, as were the years before it. I've only just started to have motives, hopes, and a plan for my future.
 
-I'm still not there yet. In fact, I kinda suck in so many ways!! I fail to deliver, I fail to be punctual, etc. But I think I have grown a lot compared to who I was 1 year ago. I have a defined plan for the future, and I feel like I've matured enough to handle the beginning of my adult life.
+I think this really started with finishing my junior year of high school in May. I used a lot of the time in summer to reflect on things, as I finally traveled for the first time in years.
 
-My junior year of high school ended in May, and I did not like that year very much. It was filled with classes I just did not enjoy taking, and generally was a waste of time. My senior year, is different. As one effort to leave the *soulless phase* I wanted to stop autopiloting through what is the most impactful thing in my life - school. Those classes happened because I did not fully consider what they entail and how it will affect my future. I wanted to think consciously about the classes I take in my final year of high school. It's hard to reverse course in your last year of high school, but I'm grateful that I'm given the controls one last time. So this time, it's great! I cut classes I didn't like, and I took a few I'm new to. My Psychology class especially is something entirely novel to me, but I'm learning a lot that happens to apply to other parts of my life in roundabout ways.
+Mainly, the [trip to Seattle](blog/wa.html) helped set the course for my life, even if it's not heading straight for Seattle. I finally feel somewhat confident in my future, although there were still many, many bumps on the road and even at the moment. But I have hope I will make it through.
 
-On the positive side, I did work on the [Roblox Legacy Wiki](https://wiki.realja.me) project considerably, and while it's not fully there, I'm happy with its current state. It's helped a LOT of people, and I'm extremely happy to hear your praises in the various Discord servers I lurk in. Thank you all!
+I just want to be more conscious about myself and my actions. Break free of the "autopilot" I feel like I've been going through. I picked classes I will actually enjoy, stuff that expands my mind in high school this year, rather than just accepting defaults.
 
-## On Micrathena
+I'm still not really there yet. But no matter what, I still feel like I've been slowly building myself up during the second part of this year, and in 2024, I will be the person I always wanted to be.
 
-## On future projects
+Happy new year, and here's to a passionate and fulfilling 2024!
 
-I'll talk about it in a future post where I'll write my hopes and plans for 2024.
+-jame
