some style tweaks

--- a/blog/_posts/2023-12-31-reflection-2023.md
+++ b/blog/_posts/2023-12-31-reflection-2023.md
@@ -13,10 +13,11 @@ It is 10:44PM, and I am rushing this post out. So it won't be long, or edited. E
 
 ## Stats
 
-- I made **33** posts, wow!!
-  - **7** blog posts (including this one)
-  - **19** dailynotes
-  - **7** devlogs
+- I made **39** posts, wow!!
+  - **9** blog posts (including this one)
+  - **22** dailynotes
+  - **8** devlogs
+  - Plus **4** blog post drafts and **8** dailynote drafts
 - I reached **123** followers on Mastodon (thank you, everyone!!)
 - Released **0** old Roblox games :')
   - Made **7** basic prototypes
